--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+:root {
+    --header-bg: red;
+    --sidebar-bg: black;
+    --to-do-bg: white;
+}
+
 body {
   height: 100vh;
 }
@@ -5,7 +11,7 @@ body {
 #grid-container {
   display: grid;
   grid-template-areas: "sidebar header" 
-                        "sidebar note";
+                        "sidebar to-do";
   
   grid-template-columns: minmax(150px, 1fr) 5fr;
   grid-template-rows: auto 1fr;
@@ -14,19 +20,19 @@ body {
 }
 
 #header {
-  background-color: red;
+  background-color: var(--header-bg);
   
   grid-area: header;
 }
 
 #sidebar {
-  background-color: black;
+  background-color: var(--sidebar-bg);
   
   grid-area: sidebar;
 }
 
-#note{
-  background-color: white;
+#to-do{
+  background-color: var(--to-do-bg);
   
-  grid-area: note;
+  grid-area: to-do;
 }
